# mkdocs-ultra-material

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BETA_RELEASE_STATUS.md  BETA_TESTING_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_JOURNEY.md  DOCKER.md  Dockerfile  FINAL_REVIEW_SUMMARY.md  GENERATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  LIVE_TESTING_RESULTS.md  META_DOCUMENTATION_STRATEGY.md  NAVIGATION_FIX_VERIFICATION.md  PRACTICAL_EXAMPLES.md  PRE_PUSH_REVIEW.md  PRIORITY_2_COMPLETE.md  PRIORITY_2_DESIGN.md  PRIORITY_3_COMPLETE.md  PRIORITY_3_DESIGN.md  PRIORITY_4_COMPLETE.md  PRIORITY_4_ENHANCED_PLAN.md  PRIORITY_5_ENHANCED_PLAN.md  PUSH_COMMANDS.sh  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  READY_TO_PUSH.md  RELEASE_CHECKLIST.md  REPOSITORY_SUMMARY.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PRIORITY_3.md  USAGE_GUIDE.md  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: API_KEYS_SETUP.md  DAILY_USE_GUIDE.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PATTERNS.md  PROMPT_LIBRARY.md  QUICK_START.md  RECOMMENDATIONS.md  RESEARCH_ANALYSIS.md  ROADMAP.md  SITE_STRUCTURE_PLAN.md  index.md
docs/features/: assets.md  enhancement.md  generation.md  search.md
docs/getting-started/: installation.md
examples/: asset-processing-example.md  homelab-plex.yaml  research-ai-agents.yaml  search-example.md
mkdocs_ai/: __init__.py  cli.py  config.py  plugin.py
mkdocs_ai/assets/: __init__.py  base.py  discovery.py  docker_compose.py  mermaid.py  models.py  processor.py  python_code.py
mkdocs_ai/cache/: __init__.py  manager.py
mkdocs_ai/enhancement/: __init__.py  clarity.py  consistency.py  grammar.py  models.py  preserver.py  processor.py
mkdocs_ai/generation/: __init__.py  markdown.py  prompt.py
mkdocs_ai/obelisk/: __init__.py  analytics.py  client.py  exporter.py  models.py
mkdocs_ai/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openrouter.py
mkdocs_ai/search/: __init__.py  embeddings.py  index.py  models.py
templates/: homelab-service.md.j2  research-report.md.j2
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_generation.py  test_integration.py  test_plugin.py  test_providers.py
tests/test_site/: mkdocs.yml
tests/test_site/.ai-cache/: cache.db
tests/test_site/.ai-templates/: api-reference.md.j2  service-docs.md.j2
tests/test_site/docs/: index.md
tests/test_site/docs/examples/: advanced.md  ai-generation-test.md  basic.md
tests/test_site/docs/features/: enhancement.md  generation.md  search.md
tests/test_site/docs/getting-started/: installation.md  quick-start.md
tests/test_site/site/: 404.html  index.html  search.html
tests/test_site/site/examples/advanced/: index.html
tests/test_site/site/examples/ai-generation-test/: index.html
tests/test_site/site/examples/basic/: index.html
tests/test_site/site/features/enhancement/: index.html
tests/test_site/site/features/generation/: index.html
tests/test_site/site/features/search/: index.html
tests/test_site/site/getting-started/installation/: index.html
tests/test_site/site/getting-started/quick-start/: index.html
tests/test_site/site/search/: search_index.json
